Rename for more accuracy

--- a/src/notebooks/3-Fold Network Model.ipynb
+++ b/src/notebooks/3-Fold Network Model.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Threefold Network Model\n",
+    "\n",
+    "This notebook contains code to create a simple *triplet* network model, i.e. three times the network with same weights that each get one item of a triplet as input, and combine all corresponding outputs before going into the loss.\n",
+    "\n",
+    "Contrast this to \"Tensor Triplet Networks.ipynb\", where only one networks exists and the triplets are computed batch-wise in the loss as 3-D tensors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,7 +34,7 @@
     "if not '..' in sys.path:\n",
     "    sys.path.append('..')\n",
     "    \n",
-    "from models.losses import SimilarityLoss\n",
+    "from models.losses.similarity import SimilarityLoss\n",
     "from utils.generic import progress_bar\n",
     "from utils.data.gen import \\\n",
     "    get_toy_dataset, \\\n",
@@ -83,51 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Combination 10 10 11\n",
-      "Combination 10 10 20\n",
-      "Combination 10 10 21\n",
-      "Combination 10 11 20\n",
-      "Combination 10 11 21\n",
-      "Combination 11 10 20\n",
-      "Combination 11 10 21\n",
-      "Combination 11 11 10\n",
-      "Combination 11 11 20\n",
-      "Combination 11 11 21\n",
-      "Combination 20 20 10\n",
-      "Combination 20 20 11\n",
-      "Combination 20 20 21\n",
-      "Combination 20 21 10\n",
-      "Combination 20 21 11\n",
-      "Combination 21 20 10\n",
-      "Combination 21 20 11\n",
-      "Combination 21 21 10\n",
-      "Combination 21 21 11\n",
-      "Combination 21 21 20\n",
-      "Created triplets.\n",
-      "Casting to numpy array ...\n",
-      "Shuffling ...\n",
-      "Transposing axis 0 and 1 ...\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(3, 2500000, 2)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = create_triplets_from_hierarchical_classes(X, y, b=50)\n",
     "#data = create_class_triplets(X, y)[:,:200000,:]\n",
